# KOTELES_ROGZITES

./: README.md
ENCODER/: INSTALL  README.md
ENCODER/gst-custom-plugins/gst-teletext/: configure.ac  gst-teletext.dox
ENCODER/gst-custom-plugins/gst-teletext/src/: Makefile.am  gstteletextdec.c  gstteletextdec.h  gstvbisrc.c  gstvbisrc.h  teletext.c
ENCODER/gst-custom-plugins/hls/: README  gsthlssink.c  gsthlssink.h
ENCODER/gst-custom-plugins/pango/: configure.ac
ENCODER/gst-custom-plugins/pango/src/: Makefile.am  gstbasetextoverlay.c  gstbasetextoverlay.h
ENCODER/html/: crossdomain.xml  player.html
ENCODER/mtva-encoder/src/: Makefile.am  m2_config  main.c
RECORDER/html/: config.json  index.html  legalrec.css
RECORDER/html/scripts/libs/timeline/js/: timeline.js
RECORDER/mtva-recorder/: config.ini
RECORDER/mtva-recorder/hlsclient/: balancer.py  consumer.py
RECORDER/scripts/: AsrunParser.py  ColossusAsrunParser.py  CreateMissingSegments.py  HLSRecorder.py  HarrisAsrunParser.py  RecoverFromEncoder.py  ScanToPlaylist.py  mp4convert.py
